# Performance-Analysis-Teaching

./: .gitignore  01-需求与设计决策.md  02-数据模型蓝图.md  03-后端改造蓝图.md  04-前端改造蓝图.md  05-执行步骤清单.md  06-学号变更与学情继承.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Caddyfile  DEPLOY.md  LICENSE  README.md  compose.env.example  docker-compose.nas.yml  docker-compose.yml  nas-update-teaching.sh  nas-update.sh  run.py  start.sh  停止成绩分析.bat  停止成绩分析.command  初始化成绩分析.bat  初始化成绩分析.command  启动成绩分析.bat  启动成绩分析.command
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  seed_mock.py
backend/app/: auth.py  auth_router.py  main.py  paths.py
backend/app/analysis/: __init__.py  class_compare.py  config.py  cross_year.py  exam_context.py  focus_list.py  rank_metrics.py  router.py  scope.py  (+2 more)
backend/tests/: conftest.py  test_analysis_tools_single_subject.py  test_api.py  test_auth.py  test_backup_weekly.py  test_chat_config.py  test_chat_scope_context.py  test_chat_tools.py  test_chat_tools_phase6c_rework.py  test_chat_tools_scope_hardening.py  test_chat_tools_single_subject.py  test_context_helpers_unit.py  test_db.py  test_exam_single_subject.py  test_excel_parser.py  test_filename_parser.py  test_homework_dashboard.py  test_homework_parser.py  test_homework_router.py  test_notes_router.py  test_phase4_supplemental_guards.py  test_phase5_dashboard_single_subject.py  test_phase7_storage_retirement.py  test_scope.py  test_seed_cleanup.py  test_single_subject_foundation.py  test_student_single_subject.py  test_subject_rank_unit.py  test_teaching_router.py  test_wrapper_validation_unit.py
(+115 files in other folders)
