[project]
name = "exam-tracker-backend"
version = "1.0.4"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "openpyxl>=3.1.0",
    "anthropic>=0.30.0",
    "openai>=1.40.0",
    "python-multipart>=0.0.10",
    "pydantic>=2.0.0",
    "alembic>=1.13.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true
